<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心电采集系统</string>
    <string name="title">蓝牙配置</string>
    <string name="dialog_YES">确定</string>
    <string name="dialog_CANCEL">取消</string>
    
    <string name="h_pull_to_refresh_pull_label">右拉刷新，我拉~</string>
    <string name="h_pull_to_refresh_footer_pull_label">左拉加载更多~</string>
     
    <string name="pull_to_refresh_pull_label">下拉刷新，我拉~</string>
    <string name="pull_to_refresh_release_label">松开可刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_footer_release_label">松开可加载</string>
    <string name="pull_to_refresh_footer_pull_label">向上加载更多~</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载…</string>
    
    <string name="str_home">首页</string>
    <string name="str_record">心电监测</string>
    <string name="str_three_dimensional">3D</string>
    <string name="str_analysis">数据分析</string>
    <string name="str_interaction">医患互动</string>
     
    <string name="on">打开蓝牙</string>
    <string name="off">关闭蓝牙</string>
    <string name="Visible">设置可见</string>
    <string name="List">扫描设备</string>
    <string name="action_settings">Settings</string>

    <drawable name="clr_normal">#454545</drawable>
    <drawable name="clr_pressed">#a44100</drawable>

    <!-- 	Show STL -->
    <string name="stl_load_progress_message">请等一会.</string>
    <string name="stl_load_progress_title">STL 文件加载中...</string>
    <string name="error_fetch_data">STL 文件解析失败.</string>
    <string name="error_outbig"> 文件过大，解析失败！</string>
    <string name="close_dialog">关闭对话框</string>
    <string name="parent_directory">父目录</string>
    <string name="choose_stl_file">选择STL文件</string>



    <!-- toggle button -->
    <string name="toggleButtonMove">移动</string>
    <string name="toggleButtonRotate">旋转</string>

    <!-- preferences -->
    <string name="app_pref">STL展示界面的配置</string>
    <string name="red">红</string>
    <string name="green">绿</string>
    <string name="blue">蓝</string>
    <string name="alpha">透明度</string>
    <string name="objectColor">模型颜色:</string>
    <string name="displayAxis">展示坐标和网格:</string>
    <string name="grids">网格:</string>
    <string name="axes">坐标:</string>
    <string name="resetToDefault">重置默认值.</string>
    <string name="closePreferences">保存 &amp; 关闭</string>
    
</resources>